--- a/ebekala/platforms/android/app/src/main/res/xml/config.xml
+++ b/ebekala/platforms/android/app/src/main/res/xml/config.xml
@@ -31,4 +31,7 @@ Ebekala
     <feature name="AdMobAds">
         <param name="android-package" value="com.appfeel.cordova.admob.AdMobAds" />
     </feature>
+    <feature name="OneSignalPush">
+        <param name="android-package" value="com.plugin.gcm.OneSignalPush" />
+    </feature>
 </widget>
