--- a/ebekala/platforms/android/app/src/main/res/xml/config.xml
+++ b/ebekala/platforms/android/app/src/main/res/xml/config.xml
@@ -34,4 +34,8 @@ Ebekala
     <feature name="OneSignalPush">
         <param name="android-package" value="com.plugin.gcm.OneSignalPush" />
     </feature>
+    <feature name="Whitelist">
+        <param name="android-package" value="org.apache.cordova.whitelist.WhitelistPlugin" />
+        <param name="onload" value="true" />
+    </feature>
 </widget>
